# humanoid

./: README.md
humanoid/: CMakeLists.txt  package.xml
humanoid_nav_msgs/: CMakeLists.txt  package.xml
humanoid_nav_msgs/.svn/: all-wcprops  entries
humanoid_nav_msgs/action/.svn/: all-wcprops  entries
humanoid_nav_msgs/msg/.svn/: all-wcprops  entries
humanoid_nav_msgs/msg_gen/cpp/include/humanoid_nav_msgs/: ExecFootstepsAction.h  ExecFootstepsActionFeedback.h  ExecFootstepsActionGoal.h  ExecFootstepsActionResult.h  ExecFootstepsFeedback.h  ExecFootstepsGoal.h  ExecFootstepsResult.h  StepTarget.h
humanoid_nav_msgs/src/humanoid_nav_msgs/msg/: _ExecFootstepsAction.py  _ExecFootstepsActionFeedback.py  _ExecFootstepsActionGoal.py  _ExecFootstepsActionResult.py  _ExecFootstepsFeedback.py  _ExecFootstepsGoal.py  _ExecFootstepsResult.py  __init__.py
humanoid_nav_msgs/src/humanoid_nav_msgs/srv/: _ClipFootstep.py  _PlanFootsteps.py  __init__.py
humanoid_nav_msgs/srv/.svn/: all-wcprops  entries
humanoid_nav_msgs/srv_gen/cpp/include/humanoid_nav_msgs/: ClipFootstep.h  PlanFootsteps.h  StepTargetService.h
nao_common/.svn/: all-wcprops  entries
nao_common/nao_common/: package.xml
nao_common/nao_description/: CMakeLists.txt  package.xml
nao_common/nao_description/.svn/: all-wcprops  entries
nao_common/nao_description/launch/.svn/: all-wcprops  entries
nao_common/nao_description/scripts/.svn/: all-wcprops  entries
nao_common/nao_description/urdf/.svn/: all-wcprops  entries
nao_common/nao_remote/.svn/: all-wcprops  entries
nao_common/nao_remote/config/.svn/: all-wcprops  entries
nao_common/nao_remote/launch/.svn/: all-wcprops  entries
nao_common/nao_remote/scripts/: execute_pose.py  nao_imu_conversion.py  pose_manager.py
nao_common/nao_remote/scripts/.svn/: all-wcprops  entries
nao_common/nao_remote/src/: nao_path_follower.cpp  remap_odometry.cpp
nao_common/nao_remote/src/.svn/: all-wcprops  entries
nao_common/nao_remote/srv/.svn/: all-wcprops  entries
nao_common/nao_teleop/.svn/: all-wcprops  entries
nao_common/nao_teleop/include/.svn/: all-wcprops  entries
nao_common/nao_teleop/include/nao_teleop/.svn/: all-wcprops  entries
nao_common/nao_teleop/launch/.svn/: all-wcprops  entries
nao_common/nao_teleop/src/.svn/: all-wcprops  entries
nao_robot/launch/.svn/: all-wcprops  entries
nao_robot/launch/.svn/text-base/: nao_driver.launch.svn-base
nao_robot/nao_driver/: CMakeLists.txt  CMakeLists.txt~  package.xml~  setup.py~
nao_robot/nao_driver/config/: topCamCalib.yml
nao_robot/nao_driver/launch/: vision.launch
nao_robot/nao_driver/scripts/: nao_camera_both.py
nao_robot/nao_driver/scripts/.svn/: all-wcprops  entries
nao_robot/nao_driver/scripts/.svn/text-base/: nao_camera.py.svn-base  nao_camera_both.py.svn-base  nao_controller.py.svn-base  nao_sensors.py.svn-base  nao_walker.py.svn-base
nao_robot/nao_driver/scripts/.svn/tmp/: nao_camera_both.py.tmp
nao_robot/nao_driver/src/: nao_camera.py  nao_camera_both.py  nao_camera_both.py~  nao_controller.py  nao_footsteps.py  nao_sensors.py  nao_tactile.py  nao_walker.py
nao_robot/nao_driver/src/.svn/: all-wcprops  entries
nao_robot/nao_driver/src/nao_driver/: nao_driver_naoqi.py
nao_robot/nao_driver/src/nao_driver/.svn/: all-wcprops  entries
nao_robot/nao_driver/src/nao_driver/.svn/text-base/: __init__.py.svn-base  nao_driver_naoqi.py.svn-base
nao_robot/nao_driver/src/nao_driver/__pycache__/.svn/: entries
nao_robot/nao_msgs/: CMakeLists.txt  package.xml
nao_robot/nao_msgs/action/.svn/: all-wcprops  entries
nao_robot/nao_msgs/msg/: RunBehaviorGoal.msg  RunBehaviorResult.msg
nao_robot/nao_msgs/msg/.svn/: all-wcprops  entries
nao_robot/nao_msgs/src/nao_msgs/msg/: _BlinkAction.py  _BlinkActionFeedback.py  _BlinkActionGoal.py  _BlinkActionResult.py  _BlinkFeedback.py  _BlinkGoal.py  _BlinkResult.py  _BodyPoseAction.py  _BodyPoseActionFeedback.py  _BodyPoseActionGoal.py  _BodyPoseActionResult.py  _BodyPoseFeedback.py  _BodyPoseGoal.py  _BodyPoseResult.py  _Bumper.py  _FadeRGB.py  _FollowPathAction.py  _FollowPathActionFeedback.py  _FollowPathActionGoal.py  _FollowPathActionResult.py  _FollowPathFeedback.py  _FollowPathGoal.py  _FollowPathResult.py  _JointAngleTrajectory.py  _JointAnglesWithSpeed.py  _JointAnglesWithSpeedAction.py  _JointAnglesWithSpeedActionFeedback.py  _JointAnglesWithSpeedActionGoal.py  _JointAnglesWithSpeedActionResult.py  _JointAnglesWithSpeedFeedback.py  _JointAnglesWithSpeedGoal.py  _JointAnglesWithSpeedResult.py  _JointTrajectoryAction.py  _JointTrajectoryActionFeedback.py  _JointTrajectoryActionGoal.py  _JointTrajectoryActionResult.py  _JointTrajectoryFeedback.py  _JointTrajectoryGoal.py  _JointTrajectoryResult.py  _RunBehaviorAction.py  (+11 more)
nao_robot/nao_msgs/src/nao_msgs/srv/: _CmdPoseService.py  _CmdVelService.py  _GetInstalledBehaviors.py  _GetTruepose.py  __init__.py
nao_robot/nao_msgs/srv/.svn/: all-wcprops  entries
nao_robot/nao_robot/: package.xml
