<package>
	<name>humanoid_nav_msgs</name>
	<version>0.0.0</version>
	<maintainer email="ludo@todo.todo">ludo</maintainer>
	<description>
	Messages and services for humanoid robot navigation
	</description>
	<author>Armin Hornung</author>
	<license>BSD</license>
	<url>http://ros.org/wiki/humanoid_nav_msgs</url>

	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>actionlib_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
</package>


